# OSINT-AI-Agent

./: .env.example  .gitignore  Dockerfile  README.md  README_fr.md  docker-compose.yml  pyproject.toml  run.py
config/: osint_sources_registry.yaml  pipeline.example.yaml  pipeline.max_coverage.yaml
config/profiles/: canada_localization.yaml
config/targets/: example_person.yaml  example_target.yaml  example_username.yaml
docs/: ARCHITECTURE.md  GITHUB_PUBLISHING.md  PROJECT_OVERVIEW.md
docs/en/: ARCHITECTURE.md  CANADA_LOCALIZATION.md  GITHUB_PUBLISHING.md  KALI_SETUP.md  MAX_COVERAGE_STRATEGY.md  PROJECT_OVERVIEW.md
docs/fr/: ARCHITECTURE.md  CANADA_LOCALIZATION.md  GITHUB_PUBLISHING.md  KALI_SETUP.md  MAX_COVERAGE_STRATEGY.md  PROJECT_OVERVIEW.md
instructions/: agent-operating-model.md  reporting-standard.md
sample_reports/: README.md  Toronto_Ontario_canada_localization.md  cyberjess_max_coverage.md  https_example.com_profile_max_coverage.md
scripts/: install_kali_tools.sh
skills/canada-osint-methodology/: SKILL.md
skills/canada-osint-methodology/agents/: openai.yaml
skills/canada-osint-methodology/references/: canada-workflow.md
skills/canada-records-location-osint/: SKILL.md
skills/domain-osint-methodology/: SKILL.md
skills/email-osint-methodology/: SKILL.md
skills/evidence-first-email-osint/: SKILL.md
skills/passive-domain-infra-osint/: SKILL.md
src/osint_agent/: __init__.py  main.py  methodology.py  models.py  pipeline.py  profiles.py  reporting.py  settings.py
src/osint_agent/tools/: __init__.py  (+9 more)
templates/: report.md.j2
(+7 files in other folders)
